force-app/main/default/objects/Person__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>City, street, zip code etc.</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>