force-app/main/default/objects/Person__c/fields/Geolocalization__c.field-meta.xml
<CustomField>
    <fullName>Geolocalization__c</fullName>
    <label>Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>