force-app/main/default/objects/Person__c/fields/Medical_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person&apos;s Medical Incurance</description>
    <label>Medical Insurance</label>
    <referenceTo>Medical_Insurance__c</referenceTo>
    <relationshipLabel>People</relationshipLabel>
    <relationshipName>People</relationshipName>
    <type>Lookup</type>
</CustomField>