force-app/main/default/objects/Person__c/fields/Personal_Data_Consent__c.field-meta.xml
<CustomField>
    <fullName>Personal_Data_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to process personal data</description>
    <label>Personal Data Consent</label>
    <type>Checkbox</type>
</CustomField>