force-app/main/default/objects/Person__c/fields/Personal_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_ID_Number__c</fullName>
    <description>PESEL number</description>
    <label>Personal ID Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>