force-app/main/default/objects/Person__c/fields/PESEL__c.field-meta.xml
<CustomField>
    <fullName>PESEL__c</fullName>
    <label>PESEL</label>
    <length>11</length>
    <type>Text</type>
</CustomField>