force-app/main/default/objects/Person__c/fields/RODO__c.field-meta.xml
<CustomField>
    <fullName>RODO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>consent for RODO</description>
    <label>RODO</label>
    <type>Checkbox</type>
</CustomField>