force-app/main/default/objects/Person__c/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <label>Street Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>