force-app/main/default/objects/Person__c/fields/Type_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Record__c</fullName>
    <description>Checks if it is a patient record or the doctor record</description>
    <label>Type of Record</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>