force-app/main/default/objects/Person__c/validationRules/Personal_Id_Number_Is_It_Correct.validationRule-meta.xml
<ValidationRule>
    <fullName>Personal_Id_Number_Is_It_Correct</fullName>
    <active>true</active>
    <description>The validation rule that checks if the PESEL is correct.</description>
    <errorConditionFormula>AND(
  LEN(Personal_ID_Number__c) = 11, 
  NOT(ISBLANK(Personal_ID_Number__c)),
  NOT(REGEX(Personal_ID_Number__c, &quot;[^0-9]&quot;)),
  VALUE(MID(Personal_ID_Number__c, 3, 2)) &gt;= 1,
  VALUE(MID(Personal_ID_Number__c, 3, 2)) &lt;= 12,
  VALUE(LEFT(Personal_ID_Number__c, 2)) &gt;= 0,
  VALUE(LEFT(Personal_ID_Number__c, 2)) &lt;= VALUE(TEXT(YEAR(TODAY()))),

   IF(
       RIGHT(Personal_ID_Number__c, 1) != &apos;0&apos;,
        MOD(
            1 * VALUE(LEFT(Personal_ID_Number__c, 1)) + 3 * VALUE(MID(Personal_ID_Number__c, 2, 1)) + 7 * 
            VALUE(MID(Personal_ID_Number__c, 3, 1)) + 9 * 
            VALUE(MID(Personal_ID_Number__c, 4, 1)) +
            1 * VALUE(MID(Personal_ID_Number__c, 5, 1)) + 3 * VALUE(MID(Personal_ID_Number__c, 6, 1)) + 7 * 
            VALUE(MID(Personal_ID_Number__c, 7, 1)) + 9 * 
            VALUE(MID(Personal_ID_Number__c, 8, 1)) +
            1 * VALUE(MID(Personal_ID_Number__c, 9, 1)) + 3 * VALUE(MID(Personal_ID_Number__c, 10, 1)),
            10) != 0,TRUE
            
   ) 
)</errorConditionFormula>
    <errorMessage>Personal Id Number is incorrect!</errorMessage>
</ValidationRule>